multiply matrices, save and load, Frobenius diff